feat(swagger): add sample responses to get endpoints
